[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "la-loadtest"
version = "0.1.0"
description = "Load testing orchestrator for middleware services"
authors = [
    {name = "Load Testing Toolkit"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.24,<1.0",
    "httpx>=0.27,<0.28",
    "pydantic>=1.10,<3.0",
    "aiofiles>=23.2,<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

